Fixed z-index issue on desktop where footnote links would overlap opened tooltips

--- a/modern-footnotes/styles.css
+++ b/modern-footnotes/styles.css
@@ -45,6 +45,7 @@
 	max-width: 300px;
 	box-shadow: 1px 1px 1px #eee;
 	box-sizing: border-box;
+	z-index: 1;
 }
 .modern-footnotes-footnote__note--mobile {
 	display: block;
